docs: align architecture and tuning documentation